--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Startup</title>
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
-    <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-
-    <!-- Your own stylesheet -->
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
+<head>
+  <title>Layout Master</title>
+  <link rel="stylesheet" type="text/css" href="./style.css">
+</head>
   <body>
-  <div class="container">
-      <div class="centered">
-        <h1>THE BIGGEST STARTUP EVENT OF THE YEAR</h1>
-      </div>
-      <div class="button">
-          <button type="button" class="findoutmore">Find out more!</button>
-      </div>
-</div>
+      <nav class="zone green">
+        <ul class="main-nav">
+          <li><a href="default.asp">About</a></li>
+          <li><a href="news.asp">Products</a></li>
+          <li><a href="contact.asp">Our Team</a></li>
+          <li class="push"><a href="about.asp">Contact</a></li>
+        </ul>
+      </nav>
+    <div class="container zone red">Cover!!!!</div>
+    <div class="zone blue">Project Grid</div>
+    <div class="zone yellow">Footer</div>
   </body>
 </html>
